--- a/quiz.html
+++ b/quiz.html
@@ -1,151 +1,145 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
-  <link rel="stylesheet" href="style.css">
   <style>
-    .quiz-header-bar {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
-      margin-bottom: 10px;
-      position: relative;
-      z-index: 2;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f7fa;
+      margin: 0;
+      padding: 0;
     }
-    .quiz-timer {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background: conic-gradient(#4caf50 var(--angle, 0deg), #ccc 0deg);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      color: #333;
-      font-size: 1.2em;
-      margin: 0 auto 10px auto;
-      position: static;
-    }
-    #result {
-      font-size: 1.3em;
-      font-weight: bold;
-      margin-top: 20px;
-      color: #1976d2;
-    }
-    button.answer-btn {
-      margin: 5px 0;
-      padding: 10px;
-      width: 100%;
-      font-size: 1em;
-      cursor: pointer;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      background-color: #f9f9f9;
-      transition: background-color 0.3s ease;
-    }
-    button.answer-btn:disabled {
-      cursor: default;
-    }
-    button.answer-btn.correct {
-      background-color: #4caf50 !important;
-      color: white;
-      border-color: #4caf50;
-    }
-    button.answer-btn.wrong {
-      background-color: #f44336 !important;
-      color: white;
-      border-color: #f44336;
-    }
-    #next-btn, #skip-btn, #submit-btn {
-      margin: 10px 10px 0 10px;
-      padding: 10px 24px;
-      font-size: 1.1em;
-      cursor: pointer;
-      border-radius: 5px;
-      border: none;
-      background-color: #1976d2;
-      color: white;
+    .app {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       display: none;
     }
-    #skip-btn {
-      background-color: #ffc107;
-      color: #333;
+    #loading {
+      text-align: center;
+      margin-top: 100px;
+      font-size: 1.5rem;
     }
-    #submit-btn {
-      background-color: #28a745;
-      color: white;
-      display: inline-block;
-      float: right;
-      margin-top: 0;
-    }
-    .quiz-index-bar {
-      display: flex;
-      justify-content: center;
-      gap: 6px;
+    #question {
+      font-size: 1.5rem;
       margin-bottom: 20px;
-      margin-top: 10px;
+    }
+    #answer-buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .answer-btn {
+      padding: 10px 15px;
+      background: #e0ecff;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-align: left;
+    }
+    .answer-btn:hover {
+      background: #d0e0ff;
+    }
+    .answer-btn.correct {
+      background: #a8f3a8;
+      border-color: #5cb85c;
+    }
+    .answer-btn.wrong {
+      background: #ffb6b6;
+      border-color: #d9534f;
+    }
+    #quizTimer {
+      font-size: 1.5rem;
+      text-align: center;
+      margin: 10px 0;
+    }
+    #quizIndexBar {
+      display: flex;
+      gap: 8px;
       flex-wrap: wrap;
-      z-index: 1;
+      justify-content: center;
+      margin: 20px 0;
     }
     .quiz-index-dot {
-      width: 28px;
-      height: 28px;
+      width: 32px;
+      height: 32px;
       border-radius: 50%;
+      background: #e0e0e0;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1em;
-      font-weight: bold;
-      border: 2px solid #ccc;
-      background: #f8d7da;
-      color: #333;
       cursor: pointer;
-      transition: background 0.2s, border 0.2s;
-    }
-    .quiz-index-dot.attempted {
-      background: #d4edda;
-      border-color: #28a745;
-      color: #155724;
-    }
-    .quiz-index-dot.skipped {
-      background: #fff3cd;
-      border-color: #ffc107;
-      color: #856404;
+      font-weight: bold;
     }
     .quiz-index-dot.current {
-      border-color: #1976d2;
-      box-shadow: 0 0 0 2px #1976d2;
+      background: #1976d2;
+      color: white;
+    }
+    .quiz-index-dot.attempted {
+      background: #a8f3a8;
+    }
+    .quiz-index-dot.skipped {
+      background: #ffb6b6;
+    }
+    #next-btn, #skip-btn, #submit-btn {
+      padding: 10px 20px;
+      margin: 5px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    #next-btn {
+      background: #1976d2;
+      color: white;
+    }
+    #skip-btn {
+      background: #ff9800;
+      color: white;
+    }
+    #submit-btn {
+      background: #4caf50;
+      color: white;
+    }
+    #result {
+      font-size: 1.5rem;
+      margin: 20px 0;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div id="loading">Checking authentication...</div>
-  <div class="app" style="display:none; position: relative;">
-    <div class="quiz-header-bar">
-      <div class="quiz-timer" id="quizTimer">--:--</div>
-      <div class="quiz-index-bar" id="quizIndexBar"></div>
-    </div>
-    <div class="quiz">
-      <h2 id="question">Question will appear here</h2>
-      <div id="answer-buttons"></div>
-      <div style="display: flex; justify-content: center; gap: 10px; margin-top: 10px;">
-        <button id="next-btn">Next</button>
-        <button id="skip-btn">Skip</button>
-        <button id="submit-btn">Submit Quiz</button>
-      </div>
-      <div id="result"></div>
-    </div>
-  </div>
+  <!-- Firebase v9 Compat SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script>
+    // Firebase Config (replace with your config)
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+    };
 
-  <!-- Firebase Auth State Listener Module -->
-  <script type="module">
-    import { auth } from './firebase-auth.js'; // your auth export
-    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    window.firebaseDb = firebase.firestore(); // <-- Set Firestore instance
+    const auth = firebase.auth();
 
-    onAuthStateChanged(auth, (user) => {
+    // Auth State Listener
+    auth.onAuthStateChanged((user) => {
       if (!user) {
-        // Not logged in, redirect to login page (adjust URL if needed)
+        // Not logged in, redirect to login page
         const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
         window.location.href = `login.html?redirect=${returnUrl}`;
       } else {
@@ -158,7 +152,18 @@
     });
   </script>
 
-  <!-- Main Quiz Logic -->
+  <div id="loading">Loading...</div>
+  <div class="app">
+    <div id="quizTimer" style="display: none;"></div>
+    <div id="quizIndexBar"></div>
+    <div id="question"></div>
+    <div id="answer-buttons"></div>
+    <button id="next-btn" style="display: none;">Next</button>
+    <button id="skip-btn" style="display: none;">Skip</button>
+    <button id="submit-btn" style="display: none;">Submit</button>
+    <div id="result"></div>
+  </div>
+
   <script>
     let questions = [];
     let currentIndex = 0;
@@ -310,7 +315,6 @@
         const minutes = String(Math.floor(remaining / 60)).padStart(2, "0");
         const seconds = String(remaining % 60).padStart(2, "0");
         quizTimer.textContent = `${minutes}:${seconds}`;
-        quizTimer.style.setProperty("--angle", `${(360 * (quizDuration - remaining) / quizDuration)}deg`);
 
         if (remaining <= 0) {
           clearInterval(timerInterval);
@@ -328,29 +332,32 @@
       submitBtn.style.display = 'none';
       quizTimer.style.display = 'none';
 
-      const quizDiv = document.querySelector(".quiz");
+      const quizDiv = document.querySelector(".app");
       const totalQuestions = questions.length;
       const manualName = new URLSearchParams(window.location.search).get("manual") || "General";
 
       if (window.firebaseDb && window.currentUser) {
-        const { getFirestore, collection, addDoc, serverTimestamp } = await import("https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js");
-        const db = window.firebaseDb;
         try {
-          await addDoc(collection(db, "users", window.currentUser.uid, "quizHistory"), {
-            score: parseFloat(score.toFixed(2)),
-            totalQuestions,
-            manual: manualName,
-            timestamp: serverTimestamp()
-          });
+          await window.firebaseDb
+            .collection("users")
+            .doc(window.currentUser.uid)
+            .collection("quizHistory")
+            .add({
+              score: parseFloat(score.toFixed(2)),
+              totalQuestions,
+              manual: manualName,
+              timestamp: firebase.firestore.FieldValue.serverTimestamp()
+            });
         } catch (err) {
           console.error("Error saving quiz result:", err);
         }
       }
 
-      quizDiv.innerHTML = 
-        `<div id="result">Your Score: ${score.toFixed(2)}</div>
+      quizDiv.innerHTML = `
+        <div id="result">Your Score: ${score.toFixed(2)}</div>
         <button id="home-btn" style="margin: 10px; padding: 10px 20px;">Home</button>
-        <button id="dashboard-btn" style="margin: 10px; padding: 10px 20px;">Dashboard</button>`;
+        <button id="dashboard-btn" style="margin: 10px; padding: 10px 20px;">Dashboard</button>
+      `;
 
       document.getElementById('home-btn').addEventListener('click', () => {
         window.location.href = 'index.html';
