--- a/quiz-history.html
+++ b/quiz-history.html
@@ -268,6 +268,7 @@
       <div class="d-flex align-items-center">
         <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
         <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
+        <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
       </div>
       <div class="hamburger" onclick="toggleMenu()">
         <div></div>
@@ -282,6 +283,7 @@
         <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
         <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
         <li><a href="gk.html">💡 General Knowledge</a></li>
+        <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
       </ul>
     </nav>
   </header>
