--- a/manual-quizzes.html
+++ b/manual-quizzes.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,50 +32,45 @@
 
     ul.menu {
       list-style: none;
-      display: flex;
-      gap: 20px;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #004080;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      padding: 10px 0;
       margin: 0;
-      padding: 0;
+      z-index: 1000;
     }
-
+    ul.menu.active {
+      display: flex;
+    }
     ul.menu li a {
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
+      display: block;
       font-weight: 500;
+    }
+    ul.menu li a:hover {
+      background: rgba(255,255,255,0.1);
     }
 
     .hamburger {
-      display: none;
+      display: flex;
       flex-direction: column;
       cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
     }
-
     .hamburger div {
       width: 25px;
       height: 3px;
       background: white;
       margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      ul.menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #004080;
-        width: 100%;
-        padding: 10px 0;
-      }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
     }
 
     /* Main Content */
@@ -120,7 +113,7 @@
       text-align: center;
       padding: 20px;
     }
-        /* New Quiz Section Styles */
+    /* New Quiz Section Styles */
     .quiz-list {
       display: flex;
       flex-wrap: wrap;
@@ -141,10 +134,19 @@
       flex: 1 1 240px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
+      border: none;
     }
 
     .manual-btn:hover {
       background-color: #125ca4;
+    }
+    /* Button group styles */
+    .d-flex {
+      display: flex;
+      align-items: center;
+    }
+    .me-3 {
+      margin-right: 1rem;
     }
   </style>
 </head>
@@ -153,47 +155,92 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
-   <!-- Firebase SDK (Make sure to include this in your page) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <!-- Firebase SDK (Make sure to include this in your page) -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-<!-- Firebase Configuration -->
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-    authDomain: "quiz-app-1b48b.firebaseapp.com",
-    projectId: "quiz-app-1b48b",
-    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
+    <!-- Firebase Configuration -->
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+        authDomain: "quiz-app-1b48b.firebaseapp.com",
+        projectId: "quiz-app-1b48b",
+        appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
-<!-- UI Section -->
-<style>
-  .btn-white-black {
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    font-weight: bold;
-    border-radius: 6px;
-    padding: 6px 12px;
-    transition: background-color 0.3s, color 0.3s;
-    text-decoration: none;
-    display: inline-block;
-  }
+    <!-- UI Section -->
+    <style>
+      .btn-white-black {
+        background-color: white;
+        color: black;
+        border: 1px solid #ccc;
+        font-weight: bold;
+        border-radius: 6px;
+        padding: 6px 12px;
+        transition: background-color 0.3s, color 0.3s;
+        text-decoration: none;
+        display: inline-block;
+      }
+      .btn-white-black:hover {
+        background-color: #f0f0f0;
+        color: #000;
+      }
+    </style>
 
-  .btn-white-black:hover {
-    background-color: #f0f0f0;
-    color: #000;
-  }
-</style>
+    <div class="d-flex align-items-center">
+      <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+      <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+    </div>
 
-<div class="d-flex align-items-center">
-  <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-  <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
-  <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+    <button class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <ul class="menu" id="navMenu">
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="categories.html">📐 MCQ Categories</a></li>
+      <li><a href="pyq-quizzes.html">📊 PYQ Based MCQ</a></li>
+      <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+      <li><a href="gk.html">💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
+    </ul>
+  </nav>
+</header>
+
+<div class="quiz-category-main">
+  <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based MCQ</h2>
+  <div class="dashboard-section">
+    <div style="text-align: center;">
+      <h3 class="mb-3" style="font-size: 2rem;">Available Manual Based</h3>
+    </div>
+    <div class="quiz-list" id="mcqList">
+      <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
+      <button class="manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
+      <button class="manual-btn" data-manual="irdim" aria-label="Start quiz for Indian Railway Schedule of Dimensions">3. Indian Railway Schedule of Dimensions</button>
+      <button class="manual-btn" data-manual="irec" aria-label="Start quiz for Indian Railway Engineering Code">4. Indian Railway Engineering Code</button>
+    </div>
+  </div>
 </div>
 
+<script>
+  // Quiz button handlers
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelectorAll('.manual-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
+      });
+    });
+  });
+</script>
+
+<footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
 
 <!-- Auth State Handling -->
 <script>
@@ -229,55 +276,11 @@
   });
 </script>
 
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <ul class="menu" id="navMenu">
-      <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="pyq-quizzes.html"> 📊 PYQ Based MCQ</a></li>
-      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
-      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
-      <li><a href="gk.html"> 💡 General Knowledge</a></li>
-      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
-    </ul>
-  </nav>
-</header>
-  <div class="quiz-category-main">
-    <h2 style="text-align:center; margin-top:32px; color:#1976d2;">Manual Based MCQ</h2>
-    <div class="dashboard-section">
-      <div style="text-align: centre;">
-  <h3 class="mb-3" style="font-size: 2rem;">Available Manual Based</h3>
-</div>
-      <div class="quiz-list" id="mcqList">
-        <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
-        <button class="manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
-        <button class="manual-btn" data-manual="irdim" aria-label="Start quiz for Indian Railway Schedule of Dimensions">3. Indian Railway Schedule of Dimensions</button>
-        <button class="manual-btn" data-manual="irec" aria-label="Start quiz for Indian Railway Engineering Code">4. Indian Railway Engineering Code</button>
-      </div>
-    </div>
-  </div>
-
-     <script>
-    // Quiz button handlers
-    document.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.manual-btn').forEach(btn => {
-        btn.addEventListener('click', () => {
-          window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
-        });
-      });
-    });
-  </script>
-  <footer>
-  &copy; 2025 IR-LDCE. All Rights Reserved.
-</footer>
-
 <script>
-  function toggleMenu() {
+  // Toggle menu on hamburger click
+  document.getElementById('hamburger').addEventListener('click', function() {
     document.getElementById('navMenu').classList.toggle('active');
-  }
+  });
 </script>
 </body>
 </html>
