--- a/categories.html
+++ b/categories.html
@@ -32,50 +32,45 @@
 
     ul.menu {
       list-style: none;
-      display: flex;
-      gap: 20px;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #004080;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      padding: 10px 0;
       margin: 0;
-      padding: 0;
+      z-index: 1000;
     }
-
+    ul.menu.active {
+      display: flex;
+    }
     ul.menu li a {
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
+      display: block;
       font-weight: 500;
+    }
+    ul.menu li a:hover {
+      background: rgba(255,255,255,0.1);
     }
 
     .hamburger {
-      display: none;
+      display: flex;
       flex-direction: column;
       cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
     }
-
     .hamburger div {
       width: 25px;
       height: 3px;
       background: white;
       margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      ul.menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #004080;
-        width: 100%;
-        padding: 10px 0;
-      }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
     }
 
     /* Main Content */
@@ -119,34 +114,41 @@
       padding: 20px;
     }
     .categories-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 48px;
-  gap: 24px;
-}
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 48px;
+      gap: 24px;
+    }
 
-.category-card {
-  background-color: #1976d2;
-  color: white;
-  font-weight: bold;
-  padding: 24px 32px;
-  border-radius: 12px;
-  text-align: center;
-  min-width: 320px;
-  font-size: 1.25rem;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.12);
-  text-decoration: none;
-  transition: background 0.2s, box-shadow 0.2s;
-  margin-bottom: 0;
-  display: block;
-}
+    .category-card {
+      background-color: #1976d2;
+      color: white;
+      font-weight: bold;
+      padding: 24px 32px;
+      border-radius: 12px;
+      text-align: center;
+      min-width: 320px;
+      font-size: 1.25rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.12);
+      text-decoration: none;
+      transition: background 0.2s, box-shadow 0.2s;
+      margin-bottom: 0;
+      display: block;
+    }
 
-.category-card:hover {
-  background-color: #125ca4;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-}
-
+    .category-card:hover {
+      background-color: #125ca4;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+    }
+    /* Button group styles */
+    .d-flex {
+      display: flex;
+      align-items: center;
+    }
+    .me-3 {
+      margin-right: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -154,47 +156,74 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
-   <!-- Firebase SDK (Make sure to include this in your page) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-<!-- Firebase Configuration -->
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-    authDomain: "quiz-app-1b48b.firebaseapp.com",
-    projectId: "quiz-app-1b48b",
-    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
+    <!-- Firebase Configuration -->
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+        authDomain: "quiz-app-1b48b.firebaseapp.com",
+        projectId: "quiz-app-1b48b",
+        appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
-<!-- UI Section -->
-<style>
-  .btn-white-black {
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    font-weight: bold;
-    border-radius: 6px;
-    padding: 6px 12px;
-    transition: background-color 0.3s, color 0.3s;
-    text-decoration: none;
-    display: inline-block;
-  }
+    <!-- UI Section -->
+    <style>
+      .btn-white-black {
+        background-color: white;
+        color: black;
+        border: 1px solid #ccc;
+        font-weight: bold;
+        border-radius: 6px;
+        padding: 6px 12px;
+        transition: background-color 0.3s, color 0.3s;
+        text-decoration: none;
+        display: inline-block;
+      }
+      .btn-white-black:hover {
+        background-color: #f0f0f0;
+        color: #000;
+      }
+    </style>
 
-  .btn-white-black:hover {
-    background-color: #f0f0f0;
-    color: #000;
-  }
-</style>
+    <div class="d-flex align-items-center">
+      <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+      <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+    </div>
 
-<div class="d-flex align-items-center">
-  <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-   <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
-  <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
-  </div>
+    <button class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <ul class="menu" id="navMenu">
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
+      <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+      <li><a href="gk.html">💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
+    </ul>
+  </nav>
+</header>
 
+<div class="categories-main">
+  <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
+  <a href="pyq-quizzes.html" class="category-card">PYQ Based Quiz</a>
+</div>
+
+<!-- Bootstrap JS Bundle (optional) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
 
 <!-- Auth State Handling -->
 <script>
@@ -202,8 +231,9 @@
 
   const loginLink = document.getElementById("loginLink");
   const logoutButton = document.getElementById("logoutButton");
-    const dashboardLink = document.getElementById("dashboardLink");
+  const dashboardLink = document.getElementById("dashboardLink");
   const mobileDashboardLink = document.getElementById("mobileDashboardLink");
+
   // Listen for auth state changes
   auth.onAuthStateChanged((user) => {
     if (user) {
@@ -211,7 +241,7 @@
       logoutButton.style.display = "inline-block";
       dashboardLink.style.display = "inline-block";
       mobileDashboardLink.style.display = "inline";
-          } else {
+    } else {
       loginLink.style.display = "inline";
       logoutButton.style.display = "none";
       dashboardLink.style.display = "none";
@@ -229,39 +259,11 @@
   });
 </script>
 
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <ul class="menu" id="navMenu">
-      <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
-      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
-      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
-      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
-      <li><a href="gk.html"> 💡 General Knowledge</a></li>
-      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="categories-main">
-  <a href="manual-quizzes.html" class="category-card">Manual Based Quiz</a>
-  <a href="pyq-quizzes.html" class="category-card">PYQ Based Quiz</a>
-</div>
-
-
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <footer>
-  &copy; 2025 IR-LDCE. All Rights Reserved.
-</footer>
-
 <script>
-  function toggleMenu() {
+  // Toggle menu on hamburger click
+  document.getElementById('hamburger').addEventListener('click', function() {
     document.getElementById('navMenu').classList.toggle('active');
-  }
+  });
 </script>
 </body>
 </html>
