--- a/establishment.html
+++ b/establishment.html
@@ -130,7 +130,7 @@
     /* Button group styles */
     .d-flex {
       display: flex;
-      align-items: center;
+      align-items: rest;
     }
     .me-3 {
       margin-right: 1rem;
@@ -194,45 +194,17 @@
   </nav>
 </header>
 
+<!-- Your main content goes here -->
 <main>
   <div class="content">
     <div class="card">
-      <h2>Welcome to IR-LDCE</h2>
-      <p>IR-LDCE provides hundreds of Manual Based questions, technical questions, and online test practice material for exams like LDCE-AEN and placement interviews.</p>
+      <h2>Establishment</h2>
+      <p>This section is for establishment-related quizzes and updates.</p>
     </div>
-    <h2 style="text-align: center;">Available MCQ</h2>
-    <div class="quiz-list">
-      <div class="quiz-card">1. Indian Railway Works Manual</div>
-      <div class="quiz-card">2. Indian Railway P-way Manual</div>
-      <div class="quiz-card">3. Indian Railway Schedule of Dimensions</div>
-      <div class="quiz-card">4. Indian Railway Engineering Code</div>
-      <div class="quiz-card">5. Small Track Machine Manual</div>
-      <div class="quiz-card">6. USFD Manual</div>
-      <div class="quiz-card">7. FBW Manual</div>
-      <div class="quiz-card">8. Store Manual</div>
-      <div class="quiz-card">9. Account Manual</div>
-      <div class="quiz-card">10. PYQ 30% Main 2022</div>
-      <div class="quiz-card">11. PYQ 30% Main 2021</div>
-    </div>
-    <div class="card">
-      <h3>Latest Questions</h3>
-      <ul>
-        <li>Under Development</li>
-        <li>Under Development</li>
-        <li>Under Development</li>
-      </ul>
-    </div>
+    <!-- Add your quiz cards or other content here -->
   </div>
   <aside class="sidebar">
-    <div class="card">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">Quantitative Aptitude</a></li>
-        <li><a href="#">Logical Reasoning</a></li>
-        <li><a href="#">HR Interview</a></li>
-        <li><a href="#">Online Tests</a></li>
-      </ul>
-    </div>
+    <!-- Sidebar content here -->
   </aside>
 </main>
 
