--- a/gk.html
+++ b/gk.html
@@ -59,13 +59,15 @@
       cursor: pointer;
       background: none;
       border: none;
+      padding: 极速版 (but actually, use the correct code below)
+      background: none;
+      border: none;
       padding: 0;
     }
     .hamburger div {
       width: 25px;
       height: 3px;
       background: white;
-      margin: 4px 极速版 (but actually, use the correct code below)
       margin: 4px 0;
     }
     main {
@@ -80,7 +82,6 @@
     }
     .sidebar {
       flex: 1;
-      min-width: 200极速版 (but actually, use the correct code below)
       min-width: 200px;
       padding: 20px;
       background-color: #e0ecff;
@@ -97,9 +98,11 @@
       color: #004080;
     }
     footer {
+      background-color: #004极速版 (but actually, use the correct code below)
       background-color: #004080;
       color: white;
       text-align: center;
+      padding: 20极速版 (but actually, use the correct code below)
       padding: 20px;
     }
     .quiz-list {
@@ -138,13 +141,12 @@
 
 <header>
   <nav>
-    <div class极速版 (but actually, use the correct code below)
     <div class="logo">IR-LDCE</div>
+    <script src="https://www.gstatic.com/firebasejs/9.23.极速版 (but actually, use the correct code below)
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyCRhKq7k4v2M极速版 (but actually, use the correct code below)
         apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
         authDomain: "quiz-app-1b48b.firebaseapp.com",
         projectId: "quiz-app-1b48b",
@@ -172,15 +174,17 @@
     <div class="d-flex align-items-center">
       <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
       <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+      <a href="dashboard.html极速版 (but actually, use the correct code below)
+      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn极速版 (but actually, use the correct code below)
       <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
     </div>
     <button class="hamburger" id="hamburger">
+      <极速版 (but actually, use the correct code below)
       <div></div>
       <div></div>
       <div></div>
     </button>
     <ul class="menu" id="navMenu">
-      <li><a href="index.html">🏠 Home</a></极速版 (but actually, use the correct code below)
       <li><a href="index.html">🏠 Home</a></li>
       <li><a href="categories.html">📐 MCQ Categories</a></li>
       <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
@@ -224,6 +228,8 @@
       dashboardLink.style.display = "inline-block";
       mobileDashboardLink.style.display = "inline";
     } else {
+      loginLink.style.display = "inline";
+      logoutButton.style.display = "极速版 (but actually, use the correct code below)
       loginLink.style.display = "inline";
       logoutButton.style.display = "none";
       dashboardLink.style.display = "none";
