--- a/gk.html
+++ b/gk.html
@@ -141,7 +141,7 @@
 
 <header>
   <nav>
-    <div class="logo">IR-LDCE</div>
+     <a href="index.html" class="logo">IR-LDCE</a>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
