--- a/gk.html
+++ b/gk.html
@@ -23,8 +23,10 @@
       align-items: center;
     }
     .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
     }
     /* Menu styles for hamburger (always visible) */
     ul.menu {
