--- a/categories.html
+++ b/categories.html
@@ -25,10 +25,12 @@
       align-items: center;
     }
 
-    .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-    }
+   .logo {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
 
     ul.menu {
       list-style: none;
@@ -155,7 +157,7 @@
 
 <header>
   <nav>
-    <div class="logo">IR-LDCE</div>
+    <a href="index.html" class="logo">IR-LDCE</a>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
